--- a/math250/exam1review.html
+++ b/math250/exam1review.html
@@ -29,6 +29,13 @@
 <hr>
 
 <!--$$begin{bmatrix} a & b\\ c & d \end{bmatrix}-->
+<h2>Exam cover sheet</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">cover</button>
+  <div id="ex1" class="collapse">
+<object width="700" height="550" data="./Sp2022cover.pdf" type="application/pdf">
+Your browser does not support pdfs, <a href="./Sp2022cover.pdf">click here to
+download the file.</a></object>
+</div>
 
 <h2>Example 1 </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example 1</button>
@@ -129,7 +136,7 @@ $$\frac{dx}{dt} = \frac{x}{t^2 + 5t + 4} + 4xt\sin(3t)$$
 population is 790 in the year 1750, and 1260 in the year 1850, how big is it in 1950? Let \(t = 0\)
 correspond to the year 1750.<br><br>
   <li>Find the general solution to \( \frac{dy}{dx} = 6x(y-1)^{2/3}\).<br><br>
-  <li>Find any equilibrium solutions to \( \frac{dy}{dx} = \ln(|x|) (x^2 - 4)\).<br><br>
+  <li>Find any equilibrium solutions to \( \frac{dy}{dx} = \ln(|x| + 1) (x^2 - 4)\).<br><br>
   <li>Consider using the Runge-Kutta method to solve the IVP \(y' = f(x,y), y(a)=\alpha\) with stepsize \(h\).
     If we solve the problem again, but with stepsize \(h/10\), how many more times do we evaluate the function \(f\) compared the first case?<br><br>
   </ol>
