--- a/math250/exam1review.html
+++ b/math250/exam1review.html
@@ -136,7 +136,7 @@ $$\frac{dx}{dt} = \frac{x}{t^2 + 5t + 4} + 4xt\sin(3t)$$
 population is 790 in the year 1750, and 1260 in the year 1850, how big is it in 1950? Let \(t = 0\)
 correspond to the year 1750.<br><br>
   <li>Find the general solution to \( \frac{dy}{dx} = 6x(y-1)^{2/3}\).<br><br>
-  <li>Find any equilibrium solutions to \( \frac{dy}{dx} = \ln(|x| + 1) (x^2 - 4)\).<br><br>
+  <li>Find any equilibrium solutions to \( \frac{dx}{dt} = \ln(|x| + 1) (x^2 - 4) e^{x}\).<br><br>
   <li>Consider using the Runge-Kutta method to solve the IVP \(y' = f(x,y), y(a)=\alpha\) with stepsize \(h\).
     If we solve the problem again, but with stepsize \(h/10\), how many more times do we evaluate the function \(f\) compared the first case?<br><br>
   </ol>
