--- a/math250/week9.html
+++ b/math250/week9.html
@@ -133,6 +133,12 @@
 </table>
 
    </ol>
+   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6soln">Circuits Reading</button>
+   <div id="ex6soln" class="collapse">
+   <object width="700" height="550" data="./EP_DE_BVP_sec3p7_circuits.pdf" type="application/pdf">
+   Your browser does not support pdfs, <a href="./EP_DE_BVP_sec3p7_circuits.pdf">click here to
+   download the file.</a></object>
+   </div>
 
 </div>
 
