--- a/math250/week10.html
+++ b/math250/week10.html
@@ -33,7 +33,10 @@
   <div id="ex0" class="collapse">
     <ol type='A'>
       <li> What form should you choose for \(y_p\) when trying to find a particular solution of \(y'' - 2y' + y = 3te^{t}\)?
-       <li> What form should you choose for \(y_p\) when trying to find a particular solution of \(y^{(4)} + 9y'' = (t^2 + 1)\sin 3t\)?
+       <li> What form should you choose for \(y_p\) when trying to find a particular solution of \(y^{(4)} + 9y'' = (t^2 + 1)\sin 3t\)?<br>
+         <details><summary>video</summary>
+           <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_h65bam7i&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_h0n2iakg" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+         </details>
     </ol>
  </div>
 
@@ -90,7 +93,7 @@
 <div id="ex3" class="collapse">
 <br>
 <P> Consider a car moving along a wavy road. Assume all the mass of the car and the 4 wheels (with shocks) can be reduced to a single mass-wheel-shock system.
-  Let the mass of the car be 800 kg and the spring constant of the shock to be 70000 N/m. Let \(x(t)\) be the displacement of the spring in the shock absorber.
+  Let the mass of the car be 600 kg and the spring constant of the shock to be 70000 N/m. Let \(x(t)\) be the displacement of the spring in the shock absorber.
   Assume the wavy road has a periodic structure with height 10 centimeter and wavelength 10 m. Then driving along the road with velocity \(v\) induces a motion \(y=0.05 \cos(2\pi vt/10)\).
   Assume the shock absorber has no damping.
 
