--- a/math250/week10.html
+++ b/math250/week10.html
@@ -124,7 +124,7 @@
 <P> Consider a mass-spring system with damping and periodic forcing given by
   $$mx'' + bx' + kx = F_0 \cos (\omega_f t), \hspace{1cm} m,b,k,F_0 > 0.$$
   In general \(x_h\), the solution to the associated homogeneous equation, will always go to zero as \(t \to \infty\). This is because of the damping or friction term, \(b >0\).
-  Our next to find a solution of this DE would be to use the method of undertermined coefficients to find a particular solution, \(x_p\).
+  Our next step to find a solution of this DE would be to use the method of undertermined coefficients to find a particular solution, \(x_p\).
   $$x_0 = A \cos(\omega_f t) + B\sin(\omega_f t)$$
   After calculating \(x_p'\) and \(x_p''\), plugging into the DE we solve for \(A\) and \(B\).
   $$ A = \frac{(k - m\omega_f^2)F_0}{(k-m\omega_f^2)^2 + (b \omega_f)^2} \hspace{1cm} B = \frac{b \omega_f F_0}{(k-m\omega_f^2)^2 + (b \omega_f)^2}$$
@@ -152,7 +152,7 @@
 <h2>Examples  - MC </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example </button>
 <div id="ex6" class="collapse">
-<P> Consider the DE \(y'' - y' - 2y = 5e^{2x}\).
+<P>
   <ol type='a'>
     <li> <img src="./resonance1.png" width=600>
     <li> <img src="./resonance2.png" width=600>
