--- a/math250/week10.html
+++ b/math250/week10.html
@@ -93,7 +93,7 @@
 <div id="ex3" class="collapse">
 <br>
 <P> Consider a car moving along a wavy road. Assume all the mass of the car and the 4 wheels (with shocks) can be reduced to a single mass-wheel-shock system.
-  Let the mass of the car be 600 kg and the spring constant of the shock to be 70000 N/m. Let \(x(t)\) be the displacement of the spring in the shock absorber.
+  Let the mass of the car be 900 kg and the spring constant of the shock to be 70000 N/m. Let \(x(t)\) be the displacement of the spring in the shock absorber.
   Assume the wavy road has a periodic structure with height 10 centimeter and wavelength 10 m. Then driving along the road with velocity \(v\) induces a motion \(y=0.05 \cos(2\pi vt/10)\).
   Assume the shock absorber has no damping.
 
@@ -112,7 +112,7 @@
   $$x'' + 4x' + 5x = 10\cos(3t), \hspace{1cm} x(0)=x'(0)=0.$$
   <ol type='1'>
     <li>Find the solution to the associated homogeneous equation.
-    <li>Use the method of undertermined coefficients to find a particular solution.
+    <li>Use the method of undetermined coefficients to find a particular solution.
     <li>Use the initial conditions to find the specific solution to the IVP.
     <li>What part of the solution is the 'transient solution'? What is the long-term behavior of the solution?
   </ol>
