--- a/math250/week11.html
+++ b/math250/week11.html
@@ -58,7 +58,7 @@
 <h2>Example 2 </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example 2</button>
 <div id="ex2" class="collapse">
- <P>Calculate the eigenvalues and eignevectors of the matrices below.
+ <P>Calculate the eigenvalues and eigenvectors of the matrices below.
 <ol type='1'>
   <li> $$A = \begin{bmatrix}0 & 1 \\-1 & 0 \end{bmatrix}$$
   <li> $$B = \begin{bmatrix}1 & 2 \\2 & -2 \end{bmatrix}$$
