--- a/math250/week12.html
+++ b/math250/week12.html
@@ -12,7 +12,7 @@
     <script src="https://sagecell.sagemath.org/static/embedded_sagecell.js"></script>
     <script>$(function () {
     // Make the div with id 'mycell' a Sage cell
-    sagecell.makeSagecell({inputLocation:  '#mycell',
+    sagecell.makeSagecell({inputLocation:  'div.mycell',
                            template:       sagecell.templates.minimal,
                            evalButtonText: 'Activate'});
     // Make *any* div with class 'compute' a Sage cell
@@ -28,6 +28,31 @@
   <h1>Math 250 </h1>
 
 <hr>
+
+<h3>vector fields</h3>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#pp">Phase plane plotting</button>
+  <div id="pp" class="collapse">
+$$\begin{bmatrix}x' \\ y'\end{bmatrix} = \begin{bmatrix} f(x,y) \\ g(x,y) \end{bmatrix}$$
+
+<div class="mycell">
+<script type="text/x-sage">
+# everything following hash symbol is comment
+var('x y')
+xmin=-4
+xmax=4
+ymin=-4
+ymax=4
+funx = -y
+funy = x
+@interact
+def _(funx=input_box(funx,label="x' = f(x,y) =  "),funy=input_box(funy,label="y' = g(x,y) =  "),
+      xmin=input_box(xmin,label="xmin = "),xmax=input_box(xmax,label="xmax = "),
+      ymin=input_box(ymin,label="ymin = "),ymax=input_box(ymax,label="ymax = ")):
+    vfp = plot_vector_field((funx,funy), (x,xmin,xmax), (y,ymin,ymax))
+    vfp.show()
+</script>
+</div>
+</div>
 
 <h2>Warmups </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warmups</button>
