--- a/math250/week14.html
+++ b/math250/week14.html
@@ -35,7 +35,7 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warmups</button>
   <div id="ex0" class="collapse">
     <ol type='A'>
-    <li> Classify the (0,0) equilibrium solution of \(\displaystyle \vec{x} = \begin{bmatrix} 1 & 2 \\ 3 & 4\end{bmatrix} \vec{x}\).<br><br>
+    <li> Classify the (0,0) equilibrium solution of \(\displaystyle \vec{x}' = \begin{bmatrix} 1 & 2 \\ 3 & 4\end{bmatrix} \vec{x}\).<br><br>
     <li> Explain why (0,0) is the only equilibrium solution of \(\displaystyle \frac{dx}{dt} = 2x - y, \hspace{1cm} \frac{dy}{dt} = x-3y\).<br><br>
     <li> Which of the phase planes below is associated with each system?
       <ol type='I'>
