--- a/other/quests/quest8/n5.html
+++ b/other/quests/quest8/n5.html
@@ -4,8 +4,8 @@
 <title>Leprechaun Quest</title>
 <script type="text/javascript" language="javascript">
 function solve(f){
-if (f.answer.value.toLowerCase()=='woofy')
-window.location = 'n1.html';
+if (f.answer.value.toLowerCase()=='origami')
+window.location = 'n6.html';
 else
 document.getElementById('error').innerHTML='Try Again!';
 }
@@ -15,7 +15,7 @@ document.getElementById('error').innerHTML='Try Again!';
 <body>
 
 Find the code hidden where this picture was taken: <br><br>
-<img src="./p0.jpg" height=400 width=400>
+<img src="./p5.jpg" height=400 width=400>
 <br><br>
 <form name="answerForm" onSubmit="solve(this); return false;">
 <h2>Enter the code : <input name="answer" type="text" size="10" maxlength="20"/>
