--- a/math154/calculus2_calc1review.html
+++ b/math154/calculus2_calc1review.html
@@ -138,7 +138,7 @@ C = 0.036B^{1.356}.
 <li>\( k(x) = \cos(y^5)  \)<br>
 <li>\( m(y) = \ln ( x+ y) \)<br>
 <li>\( n(z) = \cos(z) e^{z^2} \left( z + y^2 \right)^2 \)<br>
-<li>\( p(x) = \csc(x) x^3\)<br>
+<li>\( p(x) = \sqrt{x} x^3\)<br>
 <li>Find \( \frac{dy}{dx} \) if \( x^2 + y^2 = z^2 \).<br>
 </ol>
 </div>
@@ -175,6 +175,6 @@ C = 0.036B^{1.356}.
 </ol>
 </div>
 
-<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2020</footer>
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
