--- a/math154/calculus1_functions.html
+++ b/math154/calculus1_functions.html
@@ -134,7 +134,7 @@ def _(alpha=(alpha,(0.,3.)),beta=(beta,(0.,3.))):
     <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
       <div id="ex6" class="collapse">
         <P> Consider blood flow in a vessel. The flow is not the same different areas of the vessel lumen. <br>
-          <img src="bloodflow.png"><br>
+          <img src="bloodflow.png" width=700><br>
          <P>\(u(r) = k (R^2 - r^2) \), where \(u\) is horizontal velocity, \(R\) is the radius of the vessel, \(r\) is the radial coordinate, and \(k\) is a constant.
         <P>What can you say about the blood flow?
 
@@ -271,6 +271,6 @@ def _(alpha=(alpha,(0.,3.)),beta=(beta,(0.,3.))):
   <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_z6k1dquc&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_2d6hif57" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe></details>
 </div>
 
-<footer>Copyright 2022 Tyler Skorczewski</footer>
+<footer style="padding-top: 3cm;">Copyright 2022 Tyler Skorczewski</footer>
 </body>
 </html>
