--- a/math154/calculus1_trig_review.html
+++ b/math154/calculus1_trig_review.html
@@ -42,6 +42,9 @@
 <li>\begin{equation*} \cos 0 \end{equation*}
 <li>\begin{equation*} \tan \pi \end{equation*}
 <li>\begin{equation*} \cos 4\pi/3  \end{equation*}
+<li>\begin{equation*} \cos 5\pi/6  \end{equation*}
+<li>\begin{equation*} \cos 7\pi/6  \end{equation*}
+
 </ol>
 </div>
 
@@ -62,6 +65,18 @@ has the largest value of B?<br>
         <li> <img src="./trigreview_cv_1.png" width=600><br>
        </ol>
  </div>
+
+ <h2>Example -  </h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exfreqper">Example</button>
+  <div id="exfreqper" class="collapse">
+   <P>What are the frequencies and periods of the trigonometric functions below?
+     <ol type='A'>
+       <li>\(\displaystyle f_1(t) = 4\sin(5t) \)<br>
+       <li>\(\displaystyle f_2(t) = 3\cos(2t + 4) - 4 \)<br>
+       <li>\(\displaystyle f_3(t) = 2\cos(\pi t - \pi/4) \)<br>
+       </ol>
+     </div>
+
 
  <h2>Example - Even/odd </h2>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exeo">Example</button>
@@ -85,6 +100,25 @@ has the largest value of B?<br>
      </ol>
 </div>
 
+<h2>Example - Temperature model </h2>
+ <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#extem">Example</button>
+ <div id="extem" class="collapse">
+
+   <P>Consider a location where the temperature,\(T\), oscillates between 50 and 70 degrees farenheit.
+     Assume the minimum and maximum temperatures are achieved at 2 am and 2 pm, respectively.
+   <P>What is an equation that models this situation where \(t\) is the hours past midnight?
+
+</div>
+
+<h2>Example - T/F </h2>
+ <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#extf">Example</button>
+ <div id="extf" class="collapse">
+
+   <P>True or False. \(\displaystyle 1 + \tan^2 (x) = \sec^2 (x)\)
+    <br><br>
+    Prove it if true, provide a reason why false if not.
+
+</div>
 
 <h2>Example - Trig identities </h2>
  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex12">Example </button>
