--- a/math154/calculus1_inverses.html
+++ b/math154/calculus1_inverses.html
@@ -37,7 +37,9 @@ $(function () {
 </ol>
 <P>Recall that to find the inverse of a function \( y = f(x) \), we swap \(x\) and \(y\) and solve for \(y\).
 <P>Let's take a closer look at \(l(x)\). Sketch it and its inverse on one set of axes. What do you notice?<br>
+  <details><summary>video</summary>
   <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_q54pz2yx&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_5w32pqe9" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+</details>
 </div>
 
 <h2>1-1 functions</h2>
@@ -118,14 +120,16 @@ show(p3+pti)
   <div id="exeo" class="collapse">
     <P>Use a right triangle diagram to find the values of \( \sin(\tan^{-1} (\frac{4}{3}))\) and \(\cos(\sin^{-1}(\frac{6}{10}))\).
       <br>
+      <details><summary>video</summary>
       <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_hv4k7ogs&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_voohhsi8" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+    </details>
 </div>
 
 <h2>Explore</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exexp">Example</button>
 <div id="exexp" class="collapse">
   <P>How many functions can you find that are their own inverse? What do you notice about these functions?
-  <P><b>Fall 2020 Math 153 students</b> Find the discussion page in Canvas on this topic and post to earn some extra credit.
+  <P><b>Fall 2022 Math 153 students</b> Find the discussion page in Canvas on this topic and post to earn some extra credit.
 </div>
 
 
