--- a/math154/calculus1_limits.html
+++ b/math154/calculus1_limits.html
@@ -138,10 +138,11 @@ the limit as \(x\) goes to 100 of \(f(x)\) is 0. Be prepared to justify your ans
       <li>\(\displaystyle \lim_{x \to 0} f(x) + g(x)\)
       <li>\(\displaystyle \lim_{x \to 1} f(x)g(x)\)
       <li>\(\displaystyle \lim_{x \to 2} f(x)g(x)\)
-      <li>\(\displaystyle \lim_{x \to 0} f(x) + g(x)\)
+      <li>\(\displaystyle \lim_{x \to 4} g(-2f(x))\)
       <li>\(\displaystyle \lim_{x \to -2^-} \frac{g(x)}{f(x)}\)
       <li>\(\displaystyle \lim_{x \to -6} f\left( \frac{g(x)}{2} \right)\)
       <li>\(\displaystyle \lim_{x \to -4}  g(f(x))\)
+        <li>\(\displaystyle \lim_{x \to -2^+} \frac{g(x)}{f(x)}\)
     </ol>
     <details><summary>video</summary>
     <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_14vvqla7&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_v1aveul4" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe></details>
@@ -201,7 +202,7 @@ the limit as \(x\) goes to 100 of \(f(x)\) is 0. Be prepared to justify your ans
           </ol><br><br>
       <li>\(\displaystyle \lim_{x\to 0} x^2 \sin(1/x)\)
         <ol type='a'>
-          <li>because no matter how close \(x\) gets to 0, there are \(x\)’s near 0 for which \(\sin \left( \frac{1}{x} \right) =1\), and some for which \(\sin \left( \frac{1}{x} \right) =-1\).
+          <li> does not exist because no matter how close \(x\) gets to 0, there are \(x\)’s near 0 for which \(\sin \left( \frac{1}{x} \right) =1\), and some for which \(\sin \left( \frac{1}{x} \right) =-1\).
           <li> does not exist because the function values oscillate around 0
           <li> does not exist because 1/0 is undefined
           <li> equals 0
