--- a/math154/calculus1_limits.html
+++ b/math154/calculus1_limits.html
@@ -132,6 +132,19 @@ the limit as \(x\) goes to 100 of \(f(x)\) is 0. Be prepared to justify your ans
   <div id="laws" class="collapse">
     <img src="./limitlaws.png" width=500>
     <br><br><br>
+    <table width=850><tr><td><img src="./twographs_limits.png" width=600></td><td>Find the limits below if they exist.
+    <ol>
+      <li>\(\displaystyle \lim_{x \to 0} f(x) + g(x)\)
+      <li>\(\displaystyle \lim_{x \to 1} f(x)g(x)\)
+      <li>\(\displaystyle \lim_{x \to 2} f(x)g(x)\)
+      <li>\(\displaystyle \lim_{x \to 4} g(-2f(x))\)
+      <li>\(\displaystyle \lim_{x \to -2^-} \frac{g(x)}{f(x)}\)
+      <li>\(\displaystyle \lim_{x \to -6} f\left( \frac{g(x)}{2} \right)\)
+      <li>\(\displaystyle \lim_{x \to -4}  g(f(x))\)
+        <li>\(\displaystyle \lim_{x \to -2^+} \frac{g(x)}{f(x)}\)
+          <li>\(\displaystyle \lim_{x \to -2^+} g(3f(x))\)
+    </ol></td></tr></table>
+    <!--
     <img src="./twographs_limits.png" width=600><br>
     Find the limits below if they exist.
     <ol>
@@ -144,7 +157,7 @@ the limit as \(x\) goes to 100 of \(f(x)\) is 0. Be prepared to justify your ans
       <li>\(\displaystyle \lim_{x \to -4}  g(f(x))\)
         <li>\(\displaystyle \lim_{x \to -2^+} \frac{g(x)}{f(x)}\)
           <li>\(\displaystyle \lim_{x \to -2^+} g(3f(x))\)
-    </ol>
+    </ol>-->
     <details><summary>video</summary>
     <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_14vvqla7&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_v1aveul4" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe></details>
   </div>
