--- a/math154/calculus1_derivative_function.html
+++ b/math154/calculus1_derivative_function.html
@@ -131,6 +131,6 @@ the following functions?<br>
     </div>
 
 
-
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2022</footer>
 </body>
 </html>
