--- a/math154/calculus2_integral_examples.html
+++ b/math154/calculus2_integral_examples.html
@@ -149,7 +149,7 @@ Set up an integral equation that can be used to determine how big of a hole woul
 <div id="ex4" class="collapse">
 <P> Consider the region bounded by the curves \(y = 0.5 x^2 + 2, y = x^2\) and the \(y\)-axis.
   What is the volume of the solid created by rotating this region around the line \(x=4\)?<br>
-  <img src="./images/int_ex_4_try2.png", height=300>
+  <img src="./int_ex_4_try2.PNG", height=300>
 </div>
 
 <h2>Example - Rocket  </h2>
@@ -198,6 +198,6 @@ What is the volume of the solid created by rotating this region around the line 
 </ol>
 </div>
 
-<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2022</footer>
 </body>
 </html>
