--- a/math154/calculus1_derivatives_of_inverses.html
+++ b/math154/calculus1_derivatives_of_inverses.html
@@ -88,5 +88,6 @@ $(function () {
 
 </div>
 
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2022</footer>
 </body>
 </html>
