--- a/math154/calculus2_arc_length_surface_area_examples.html
+++ b/math154/calculus2_arc_length_surface_area_examples.html
@@ -86,7 +86,7 @@ def _(f=input_box(f,label="Equation 1 (blue)"),g=input_box(g,"Equation 2 (red)")
 <div id="ex2" class="collapse">
   <P>Set up an integral representing the arc length of the curve \(x = y - y^2\) in quadrant I of the Cartesian plane.
     Make sure to draw a picture and include any calculations required to set up your integral.
-    You do not need to evaluate your integral as it will not be possible with analytical methods.
+    You do not need to evaluate your integral.
 </div>
 
 <h2>Example  - Catenary </h2>
@@ -158,6 +158,13 @@ def _(f=input_box(f,label="Equation 1 (blue)"),g=input_box(g,"Equation 2 (red)")
 <div id="ex18" class="collapse">
 <P> Show the arc length of the graph of \(f(x) = \frac{1}{12} x^3 + \frac{1}{x}\) over the interval [1,3] is 17/6.
   Make sure to draw a picture and show all your work.
+</div>
+
+<h2>Example - metal sheet</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex19">Example </button>
+<div id="ex19" class="collapse">
+<P> Consider stamping a flat metal sheet into a corrugted pattern 28 inches long with shape given by \(y = \sin(\pi x/7) \).
+  Set up an integral for the length of the original flat sheet.
 </div>
 
 <footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2022</footer>
