--- a/math154/calculus2_arc_length_surface_area_examples.html
+++ b/math154/calculus2_arc_length_surface_area_examples.html
@@ -129,7 +129,7 @@ def _(f=input_box(f,label="Equation 1 (blue)"),g=input_box(g,"Equation 2 (red)")
 <h2>Example - surface area of funnel 2 ways  </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
 <div id="ex6" class="collapse">
-  <P> Determine the surface area of the funnel shape made by rotating the curve \(y = x^{1/3}\) about the \(y\)-axis.
+  <P> Determine the surface area of the funnel shape made by rotating the curve \(y = x^{1/3}\) from \(x=0\) to \(x=1\) about the \(y\)-axis.
     <ol>
       <li>Draw a picture of the situation.<br>
       <li>Find the surface area by setting up and evaluating an integral with respect to \(x\).<br>
