--- a/math154/calculus1_derivatives_exam_review.html
+++ b/math154/calculus1_derivatives_exam_review.html
@@ -83,7 +83,7 @@ ymax=input_box(1,label="max y"), ):
   <li>True or False. If a function is differentiable, it is continuous. <br><br>
   <li>Find the equation of the tangent line to the graph of \( f(x) = e^{-x} \) at \(x=0\).<br><br>
   <!--<li>Let \(\displaystyle f(x) = \sqrt{x} \). Find \(f'(x)\) using the definition of derivative.<br><br>-->
-    <P>Find derivatives of the functions below.
+   <li>Find derivatives of the functions below.
     <ol>
       <li>\(\displaystyle f(x) = \cos(3x) \) <br><br>
       <li>\(\displaystyle g(x) = \sqrt{x}(x+5)\) <br><br>
@@ -96,7 +96,7 @@ ymax=input_box(1,label="max y"), ):
           <li>\(\displaystyle j(x) = \sin(2x)e^{3x}\) <br><br>
 
       </ol><br><br>
-    <li>What is the 2020th derivative of \(y(x) = \sin(x)\)?<br><br>
+    <li>What is the 2022nd derivative of \(y(x) = \sin(x)\)?<br><br>
     <li>Find the equation of the tangent line to the graph of \( f(x) = \sqrt{x+1} \) at \(x=8\).<br><br>
     <li>If the position of a particle is given by \(v(t) = 3t^6 - 2t^2 - t\), find the velocity and acceleration as functions of \(t\).<br><br>
     <li>Find the derivative of \(\displaystyle g(x) = \sin^4 (x^3)(x^3 - x + 1)\)<br><br>
