--- a/math154/calculus2_work_fluid_forces.html
+++ b/math154/calculus2_work_fluid_forces.html
@@ -101,7 +101,8 @@ $(function () {
 <div id="ex5" class="collapse">
   <!--<iframe width="1132" height="637" src="https://www.youtube.com/embed/M3FYfcHWnXs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 
-  <iframe width="1280" height="720" src="https://www.youtube.com/embed/7klGsWiHY50" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <!--<iframe width="1280" height="720" src="https://www.youtube.com/embed/7klGsWiHY50" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/7klGsWiHY50" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <P>Set up integrals and calculate the work done for the three parts of the Heavy Metal challenge.
   Assume the chain is 30 feet long, weighs 350 pounds, with a 100 weight at the end.
