--- a/math154/calculus1_lhopitals_rule.html
+++ b/math154/calculus1_lhopitals_rule.html
@@ -118,6 +118,6 @@ $(function () {
 
 
 
-
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2022</footer>
 </body>
 </html>
