--- a/math154/calculus1_limits_with_infinity.html
+++ b/math154/calculus1_limits_with_infinity.html
@@ -125,6 +125,6 @@ def _(f=input_box(f,label="f(x) =  ")):
 
     </div>
 
-
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2022</footer>
 </body>
 </html>
