--- a/math154/calculus1_optimization.html
+++ b/math154/calculus1_optimization.html
@@ -175,6 +175,6 @@ def tangent_line(f = input_box(default=x^2*(sqrt(3600-x^2))), x0 = slider(0, 60,
 
 
 
-
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2022</footer>
 </body>
 </html>
