--- a/math154/calculus1_related_rates.html
+++ b/math154/calculus1_related_rates.html
@@ -134,5 +134,6 @@ $(function () {
             </div>
 
 
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2022</footer>
 </body>
 </html>
